--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
             {
                 "label": "Duotone Theme",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Duotone Theme-color-theme.json"
+                "path": "./themes/Duotone Theme-color-theme.json",
+                "repository": "https://github.com/diversifiedplayz/duotone"
             }
         ]
     }
