--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "duotone",
-    "displayName": "duotone",
+    "name": "duotone-mc",
+    "displayName": "Duotone MC",
     "description": "color theme that supports minecraft datapacks",
     "version": "0.0.1",
     "repository": {
